@@ -1,0 +1,3 @@
+gsettings_SCHEMAS = com.github.muesli4.gclipboard.gschema.xml
+
+@GSETTINGS_RULES@
