@@ -1,3 +1,7 @@
+2016-05-21  gettextize  <bug-gnu-gettext@gnu.org>
+
+	* configure.ac (AM_GNU_GETTEXT_VERSION): Bump to 0.19.7.
+
 2016-05-18  gettextize  <bug-gnu-gettext@gnu.org>
 
 	* configure.ac (AC_CONFIG_FILES): Add po/Makefile.in.
